# src/controllers/userController.js
@@ -2,6 +2,22 @@ import createHttpError from 'http-errors';
 import { saveFileToCloudinary } from '../utils/saveFileToCloudinary.js';
 import { User } from '../models/user.js';
 
+export const getCurrentUser = async (req, res) => {
+  res.status(200).json(req.user);
+};
+
+export const updateCurrentUser = async (req, res) => {
+  const { username } = req.body;
+
+  const updatedUser = await User.findOneAndUpdate(
+    { _id: req.user._id },
+    { username },
+    { returnDocument: 'after', runValidators: true },
+  );
+
+  res.status(200).json(updatedUser);
+};
+
 export const updateUserAvatar = async (req, res) => {
   const { file, user } = req;
   if (!file) {
