# src/routes/authRoutes.js
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { celebrate } from 'celebrate';
 import {
+  checkSession,
   loginUser,
   logoutUser,
   refreshUserSession,
@@ -21,6 +22,7 @@ router.post('/auth/register', celebrate(registerUserSchema), registerUser);
 router.post('/auth/login', celebrate(loginUserSchema), loginUser);
 router.post('/auth/logout', logoutUser);
 router.post('/auth/refresh', refreshUserSession);
+router.get('/auth/session', checkSession);
 //!----------------------------------------
 router.post(
   '/auth/request-reset-email',
